fix footer color text, size, and spacing

--- a/backend/app/assets/stylesheets/homepage.css
+++ b/backend/app/assets/stylesheets/homepage.css
@@ -60,35 +60,6 @@ a:hover{ text-decoration: none; }
   margin-right: 15px;
 }
 
-#lltv .homepage-nav-links {
-  padding-top: 27px; /*was 37x */
-  color: #5D5D5D;
-  font-size: 12px;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-family: avenir-black, 'Work Sans';
-}
-
-#lltv .homepage-nav-links li {
-  margin-left: 43px;
-  float: right;
-}
-
-#lltv .homepage-nav-links .no-btn-nav {
-  margin-top: 10px;
-}
-
-#lltv .homepage-nav-links li > a {
-  color: #5D5D5D;
-  padding: 0px;
-  cursor: pointer;
-  font-weight: 700;
-}
-
-#lltv .homepage-nav-links li > a:hover {
-  background-color: transparent;
-}
-
 #lltv .homepage-category-row{
   padding: 0;
   font-weight: 700;
@@ -265,7 +236,7 @@ a:hover{ text-decoration: none; }
 
 .homepage-footer{
   min-height: 236px;
-  color: #989898;
+  color: #5d5d5d;
   font-weight: 700;
   font-family: avenir-black, 'Work Sans';
   text-transform: uppercase;
@@ -324,7 +295,6 @@ a:hover{ text-decoration: none; }
 
 .footer-third-row div.col-sm-8.col-sm-offset-4 p{
   margin: 10px 20px 0 0;
-  color: #989898;
   font-size: 10px;
   font-weight: 400;
   font-family: avenir-medium, 'Work Sans';
@@ -397,22 +367,25 @@ a:hover{ text-decoration: none; }
 
   .row.discover-info-row div.col-sm-4:nth-child(2){ margin: 20px 0 20px;}
 
-  .footer-first-row div.col-sm-4{ margin-bottom: 10px;}
+  .footer-first-row div.col-sm-4{ margin-bottom: 30px;}
 
   .footer-collapse{
     position: relative;
     top: 330px;
   }
 
-  .homepage-footer{ text-align: center;}
+  .homepage-footer{
+    text-align: center;
+    font-size: 15px;
+  }
 
-  .footer-list-first-row{ margin: 0;}
+  .footer-list-first-row, .footer-list-second-row{ margin: 0;}
 
-  .footer-list-first-row > div{ margin-bottom: 10px;}
+  .footer-list-first-row > div{ margin-bottom: 30px;}
 
-  .footer-list .row:nth-child(2) > div{ margin-bottom: 10px;}
+  .footer-list .row:nth-child(2) > div{ margin-bottom: 30px;}
 
-  .footer-list .row:nth-child(3) > div{ margin-bottom: 10px;}
+  .footer-list .row:nth-child(3) > div{ margin-bottom: 30px;}
 
   .footer-second-row div.col-sm-8 form div.form-group input{ margin: 0 auto;}
 
@@ -461,7 +434,7 @@ a:hover{ text-decoration: none; }
   }
 
   .quote-container-buttons ul{margin-bottom: 31px;}
-  
+
   .quote-browse-btn, .quote-create-btn{font-size: 15px;}
 
   .quote-browse-btn {margin-bottom: 13px;}
